--- a/server/views/index.html
+++ b/server/views/index.html
@@ -3,8 +3,46 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>{{title}}</title>
+    <link rel="stylesheet" type="text/css" href="/assets/home/css/home.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
+
 </head>
 <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://cdn.rawgit.com/vast-engineering/jquery-popup-overlay/1.7.10/jquery.popupoverlay.js"></script>
+    <script type="text/javascript" src="/assets/home-bundle.js"></script>
+
     <h1>{{header}}</h1>
+
+    <div class="container">
+        <!--class prefix must be equal to the popup div id prefix -->
+        <button class="my_popup_open">Get Started!</button>
+
+        <div id="my_popup">
+            <h2><span class="fontawesome-lock"></span>Sign In</h2>
+            <form action="#">
+                <fieldset>
+
+                    <p><label for="email">E-mail address</label></p>
+                    <p><input type="email" id="email" placeholder="mail@address.com"></p>
+
+                    <p><label for="password">Password</label></p>
+                    <p><input type="password" id="password" placeholder="password"></p>
+
+                    <p><input type="submit" value="Sign Up"></p>
+
+                </fieldset>
+            </form>
+        </div>
+    </div>
+
+    <script>
+        $(document).ready(function() {
+            $('#my_popup').popup({
+                transition: 'all 0.3s'
+            });
+        });
+    </script>
+
 </body>
 </html>
