--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -1,8 +1,12 @@
 #task-panel {
-    border-style: solid;
-    border-width: 3px;
-    border-color: red;
-    padding: 20px;
+    padding: 5px;
+}
+
+.task-table {
+    width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 td {
@@ -11,4 +15,18 @@ td {
 
 .completed {
     color: gray;
+}
+
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.logout {
+    float: right;
+}
+
+.app-header {
+    background-color: lavender;
 }
