--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -1,3 +1,47 @@
+
+/* task row */
+.task-items {
+  position: relative;
+  margin: 10px;
+}
+
+.taskrow .fa-close, .taskrow .fa-circle-thin {
+  font-size: 20px;
+  transition: opacity 0.1s linear, color 0.1s linear;
+}
+
+.taskrow .fa-circle-thin {
+  margin-right: 30px;
+}
+
+.taskrow .fa-close {
+  position: absolute;
+  right: 200px;
+  display: none;
+}
+
+.taskrow .fa-close:hover {
+  color: #DD0000;
+}
+
+.taskrow:hover .fa-close {
+  display: inline;
+}
+
+.taskrow:hover {
+  /*margin: 0;*/
+}
+/* task row end */
+
+
+/* completed row end */
+
+.completed-row {
+  padding-bottom: 10px;
+}
+/* completed end */
+
+
 #task-panel {
     padding: 5px;
 }
@@ -28,10 +72,6 @@
 
 .task-table .milestone-name {
   font-size: 18px;
-}
-
-td {
-    padding: 5px;
 }
 
 .completed {
