use pivotal-UI for notifications

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -1,4 +1,3 @@
-
 /*****************task row *****************/
 .task-items {
   position: relative;
@@ -119,6 +118,24 @@ body {
 }
 
 
+/****************** app header **********************/
+
+.app-logo >a {
+  font-size: 16pt;
+  font-family: Helvetica;
+}
+
+.app-logo {
+  width: 200px;
+}
+
+.app-header .header-notif {
+  width: auto;
+}
+
+.app-header .header-displayName {
+  width: 100px;
+}
 
 .app-header ul {
   list-style: none;
@@ -131,55 +148,20 @@ body {
 
 .app-header li {
   padding-top: 1em;
-  width: 120px;
   height: 50px;
   font-size: 1em;
   display: inline-block;
 }
 
-.app-header a {
-  text-decoration: none;
-  display: block;
-  transition: .3s background-color;
-}
-
-.app-header span {
-  text-decoration: none;
-  display: block;
-  transition: .3s background-color;
-}
-
-
 .app-header a:hover {
   opacity: 0.4;
+  text-decoration: none;
 }
 
 .app-header span:hover {
   opacity: 0.4;
   cursor: pointer;
-}
-
-/******************* Notification badge ****************************/ 
- /*
-  Notification Icon made by Google from www.flaticon.com is licensed under CC BY 3.0
-*/
-.notif {
-  position: relative;
-}
-
-.btn__badge {
-  background: #FF5D5D;
-  color: white;
-  font-size: 12px;
-  position: absolute;
-  top: -7px;
-  right: 40px;
-  padding: 1px 6px;
-  border-radius: 50%;
-}
-
-.btn__badge--red {
-  background: red;
+  text-decoration: none;
 }
 
 
@@ -256,3 +238,4 @@ button {
 .menu > div > .menu-item:hover {
   color: orange;
 }
+*/
