--- a/server/views/index.html
+++ b/server/views/index.html
@@ -23,6 +23,9 @@
             <form class="signup_form">
                 <fieldset>
 
+                    <p><label>Display name</label></p>
+                    <p><input class="display_name_input" placeholder="Your name :)"></p>
+
                     <p><label>E-mail address</label></p>
                     <p><input type="email" class="email_input" placeholder="mail@address.com"></p>
 
@@ -30,7 +33,6 @@
                     <p><input type="password" class="password_input" placeholder="password"></p>
 
                     <p><input type="submit" value="Sign Up"></p>
-
                 </fieldset>
             </form>
         </div>
