--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -1,3 +1,12 @@
+.table-filename {
+  position: relative;
+  left: 10px;
+}
+
+.table-row-file {
+  cursor: pointer;
+}
+
 /***************** Header *****************/
 .nav-bar {
   background-color: white;
