--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -4,6 +4,41 @@
   margin-left: 30px;
 }
 
+/************************ Project list *******************/
+.project-list ul, .project-list li {
+  margin-left: 0;
+  padding-left: 5px;
+  list-style-type: none;
+  font-size: 18px;
+  font-family: Roboto, sans-serif;
+}
+
+.project-list-header span {
+  font-size: 14px;
+  font-family: Roboto, sans-serif;
+  font-weight: bold;
+}
+
+.project-list li {
+  cursor: pointer;
+  padding-top: 6px;
+  padding-left: 15px;
+  padding-bottom: 6px;
+}
+
+.project-list li:hover {
+  background-color: #263238;
+}
+
+.add_circle {
+  color: #ffb74d;
+}
+
+.project-list-header {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding-left: 20px;
+}
 
 /******************** chat app ********************/
 .chatapp {
@@ -96,7 +131,7 @@
 }
 
 /************************ Project header ***************************/
-.project-header-text, .add-milestone-btn {
+.add-milestone-btn {
   float: left;
   display:inline;
 }
@@ -123,6 +158,10 @@ ul.online-users {
 .project-header {
   padding-top: 5px;
   padding-bottom: 15px;
+  margin-top: 50px;
+  -webkit-box-shadow: 0px 7px 25px -6px rgba(0,0,0,0.62);
+  -moz-box-shadow: 0px 7px 25px -6px rgba(0,0,0,0.62);
+  box-shadow: 0px 7px 25px -6px rgba(0,0,0,0.62);
 }
 /******************* General ****************************/
 .header-color {
@@ -131,18 +170,26 @@ ul.online-users {
 }
 
 .project-header-text {
-  margin-left: 50px;
+  margin-left: 40px;
+  float: left;
+  display:inline;
 }
 
 .left-panel {
   position: fixed;
-  width: 20%;
+  background-color: #37474f;
+  color: white;
   height: 100%;
+  padding: 0;
+}
+
+.task-table {
+  margin-left:250px;
 }
 
 .body-wrapper {
-  margin-top: 50px;
-  position: absolute;
+  position: fixed;
+  height: 100%;
 }
 
 /******************* Notification List****************************/
