--- a/server/views/index.html
+++ b/server/views/index.html
@@ -1,70 +1,60 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>{{title}}</title>
+<head>
+    <meta charset="utf-8">
+    <title>NUS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="generator" content="Codeply">
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="300282221041-etbepkgu5gvfmo7fhd2khp1rv4ktm7b7.apps.googleusercontent.com">
+
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/home/css/home.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://cdn.rawgit.com/vast-engineering/jquery-popup-overlay/1.7.10/jquery.popupoverlay.js"></script>
-    <script type="text/javascript" src="/assets/home-bundle.js"></script>
-
-    <h1>{{header}}</h1>
-
-    <div class="container">
-        <!--class prefix must be equal to the popup div id prefix -->
-        <button class="signup_popup_open">Get Started!</button>
-
-        <div id="signup_popup" class="auth_popup">
-            <h2><span class="fontawesome-lock"></span>Sign Up</h2>
-            <form class="signup_form">
-                <fieldset>
-
-                    <p><label>Display name</label></p>
-                    <p><input class="display_name_input" placeholder="Your name :)"></p>
-
-                    <p><label>E-mail address</label></p>
-                    <p><input type="email" class="email_input" placeholder="mail@address.com"></p>
-
-                    <p><label>Password</label></p>
-                    <p><input type="password" class="password_input" placeholder="password"></p>
-
-                    <p><input type="submit" value="Sign Up"></p>
-                </fieldset>
-            </form>
-        </div>
-
-        <button class="login_popup_open">Log in</button>
-
-        <div id="login_popup" class="auth_popup">
-            <h2><span class="fontawesome-lock"></span>Log In</h2>
-            <form class="login_form">
-                <fieldset>
-
-                    <p><label>E-mail address</label></p>
-                    <p><input type="email" class="email_input" placeholder="mail@address.com"></p>
-
-                    <p><label>Password</label></p>
-                    <p><input type="password" class="password_input" placeholder="password"></p>
-
-                    <p><input type="submit" value="Log in"></p>
-
-                </fieldset>
-            </form>
+<header id="first">
+    <div class="header-content">
+        <div class="inner">
+            <h1>Collab</h1>
+            <h4>Helping small teams do big things</h4>
+            <hr>
+            <div class="g-signin2" data-onsuccess="onSignIn"></div>
         </div>
     </div>
+</header>
+<script>
+    function onSignIn(googleUser) {
+        var profile = googleUser.getBasicProfile();
+        var id_token = googleUser.getAuthResponse().id_token;
+        localStorage.setItem('email', profile.getEmail());
+        localStorage.setItem('display_name', profile.getName());
+        localStorage.setItem('display_image', profile.getImageUrl());
+        localStorage.setItem('google_token', id_token);
 
-    <script>
-        $('#signup_popup').popup({
-            transition: 'all 0.3s'
-        });
-
-        $('#login_popup').popup({
-            transition: 'all 0.3s'
-        });
-    </script>
-
+        var payload = {
+            display_name: profile.getName(),
+            display_image: profile.getImageUrl(),
+            email: profile.getEmail(),
+            google_id: profile.getId()
+        }
+        $.ajax({
+            type: 'POST',
+            url: 'http://localhost:4000/login',
+            data: payload
+        }).done(function(res) {
+            localStorage.setItem('jwt', res.token);
+            localStorage.setItem('user_id', res.user_id);
+            window.location.assign('http://localhost:4000/app');
+        }).fail(function(res) {
+        })
+    }
+</script>
 </body>
+
 </html>
