--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -4,6 +4,18 @@
   margin-left: 30px;
 }
 
+.milestone-view, .files-list {
+  overflow-y: scroll;
+}
+
+.milestone-view {
+  max-height: 60vh;
+}
+
+.files-list {
+  max-height: 35vh;
+}
+
 /************************ Project list *******************/
 .project-list ul, .project-list li {
   margin-left: 0;
