--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -145,6 +145,12 @@
   padding-left: 40px;
 }
 
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:focus,
+.navbar-default .navbar-nav>.active>a:hover  {
+  background-color: transparent;
+}
+
 /****************** milestone row ***********************/
 
 .milestone-header, .more-vert-btn {
