--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -130,11 +130,10 @@
 
 /***************** Header *****************/
 .nav-link {
-  border-bottom: 4px solid #424242;
-  transition: border-bottom .3s;
+  transition: opacity .3s;
 }
 .nav-link:hover {
-  border-bottom: 4px solid darkgray;
+  opacity: 0.7;
 }
 
 .right-nav {
@@ -149,6 +148,10 @@
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover  {
   background-color: transparent;
+}
+
+.padded-nav {
+  margin-top: 9px;
 }
 
 /****************** milestone row ***********************/
@@ -195,9 +198,7 @@ ul.online-users {
 }
 
 .project-header {
-  padding-top: 5px;
-  padding-bottom: 15px;
-  margin-top: 50px;
+  margin-top: 69px;
   -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);
   -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);
   box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);
