--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -197,8 +197,12 @@ ul.online-users {
   float: right;
 }
 
+.online-users {
+  padding-top: 8px;
+}
+
 .project-header {
-  margin-top: 69px;
+  margin-top: 65px;
   -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);
   -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);
   box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);
@@ -207,6 +211,10 @@ ul.online-users {
 .header-color {
   background-color: #424242;
   border-color: #455a64;
+}
+
+.display-name {
+  padding-left:10px;
 }
 
 .project-header-text {
