--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -1,5 +1,5 @@
 /********************* task table ************************/
-.task-table-content {
+.main-content {
   margin-top: 50px;
   margin-left: 30px;
 }
@@ -57,64 +57,6 @@
   margin-bottom: 15px;
   padding-left: 20px;
   color: #b0bec5;
-}
-
-/******************** chat app ********************/
-.chatapp {
-  font-family: helvetica, arial, sans-serif;
-  max-width: 760px;
-  margin: 20px auto;
-  overflow: hidden;
-}
-
-.message-list, .thread-list {
-  border: 1px solid #ccf;
-  font-size: 16px;
-  height: 400px;
-  margin: 0;
-  overflow-y: auto;
-  padding: 0;
-}
-
-.message-thread-heading,
-.thread-count {
-  height: 40px;
-  margin: 0;
-}
-
-.message-list-item, .thread-list-item {
-  list-style: none;
-  padding: 12px 14px 14px;
-}
-
-.message-author-name,
-.thread-name {
-  color: #66c;
-  float: left;
-  font-size: 13px;
-  margin: 0;
-}
-
-.message-time, .thread-time {
-  color: #aad;
-  float: right;
-  font-size: 12px;
-}
-
-.message-text, .thread-last-message {
-  clear: both;
-  font-size: 14px;
-  padding-top: 10px;
-}
-
-.message-composer {
-  box-sizing: border-box;
-  font-family: inherit;
-  font-size: 14px;
-  height: 5em;
-  width: 100%;
-  margin: 20px 0 0;
-  padding: 10px;
 }
 
 /********************* table *******************/
@@ -177,6 +119,14 @@ i.material-icons.add-milestone-btn {
 
 .header-text {
   color: #E0E0E0;
+}
+
+#hangouts-btn-wrapper {
+  display: inline;
+  top: 15px;
+  float: left;
+  position: relative;
+  margin-left: 20px;
 }
 
 .add-milestone-btn {
@@ -242,16 +192,13 @@ ul.online-users {
 }
 
 /******************* Notification List****************************/
-.notif-title {
-  font-size: 13pt;
-  background-color: white;
-  z-index: 1000;
-  border-bottom: 1px solid #dddddd;
-  font-weight: bold;
-}
-
 .notif-text, .notif-fuzzy-time {
   display: block;
+}
+
+.notif-fuzzy-time {
+  font-size: 11px;
+  color: #999;
 }
 
 .notification-list {
@@ -262,14 +209,28 @@ ul.online-users {
 .notification-list .notif-item {
   display: block;
   padding: 5px;
-  background-color: white;
-  border-bottom: 1px solid rgba(100, 100, 100, .4);
+  margin-left: -40px;
 }
 
-.notification-container {
-  background-color: white;
-  overflow: visible;
-  top: 60px;
-  width: 400px;
-  z-index: 1000;
+.notif-read {
+  background-color: #ffffff;
+  border-bottom: 1px solid #eaeaea;
+}
+
+.notif-unread {
+  background-color: #eaf5ff;
+  border-bottom: 1px solid #cbdeec;
+}
+
+.notif-container {
+  width: 120%
+}
+
+.notif-photo {
+  float: left;
+  padding-right: 10px;
+}
+
+.notif-buttons {
+  margin-left: 43px;
 }
