--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -61,6 +61,7 @@
 
 .task-row {
   margin-left: -40px;
+  min-height: 50px;
 }
 
 .task-content{
@@ -68,11 +69,13 @@
   position: relative;
   bottom: 5px;
   font-size: large;
+  margin-top: 14px;
 }
 
 .task-checkbox {
   display: inline-block;
   float: left;
+  margin-top: 10px;
 }
 
 .task-actions {
@@ -109,6 +112,10 @@
 .completed-task-list {
     color: #aaaaaa;
 }
+
+.assignee-avatar {
+  display: inline-block;
+  float: right;}
 
 /************************ Project list *******************/
 .project-list ul, .project-list li {
@@ -231,20 +238,19 @@ i.material-icons.add-milestone-btn {
   position: relative;
 }
 
-ul.online-users li {
+ul.avatar-list li {
   display: inline;
   padding: 10px 20px;
   list-style-type: none;
 }
 
-ul.online-users {
+ul.avatar-list {
   float: right;
 }
 
 .online-users {
   padding-top: 8px;
 }
-
 .project-header {
   margin-top: 65px;
   -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.4);
